# burn

./: .gitignore  CMakeLists.txt  meson.build
resources/: BurnButton.qml  DoubleSpinBox.qml  main.qml  main_cli.qml
resources/css/: main-menu.css  main.css
resources/pages/: ConfigDialog.qml  ExecutingDialog.qml  FileSelection.qml  FolderSelection.qml  GerberConfigDialog.qml  StartDialog.qml  WifiOptionsDialog.qml  WifiPasswordDialog.qml
src/: file_chooser_dialog.c  file_chooser_dialog.h  gerber_renderer.cpp  gerber_renderer.h  gerber_renderer_mirror.cpp  gerber_renderer_mirror.h  main.c  main.cpp  main_menu.c  main_menu.h  main_overlay.c  main_overlay.h  presentation.c  presentation.h  wifi_auth.cpp  wifi_auth.h  wifi_model.cpp  wifi_model.h  wifi_network.cpp  wifi_network.h
src/gerber/: CMakeLists.txt  common.h  draw-gdk.c  draw-gdk.c.save  draw-gdk.h  draw.c  draw.h  export-image.c  gerb_file.c  gerbv.c  gerbv.ct  gerbv.h  meson.build  render.h
src/gerber/cmake/: config.h.cmake
src/wifi/: custom_types.h  iwd.cpp  iwd.h  iwd_dbusinterface.xml
